--- a/RazorCurrencyC/Pages/Shared/_Layout.cshtml
+++ b/RazorCurrencyC/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">RazorCurrencyC</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Razor Currency Converter</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CConvert">Currency Converter</a>
                         </li>
                     </ul>
                 </div>
@@ -35,9 +35,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-center">
         <div class="container">
-            &copy; 2021 - RazorCurrencyC - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - Razor Currency Converter - Timothy Arole - 21906423 - CO550 Web Applications - Logbook 1
         </div>
     </footer>
 
