--- a/RazorCurrencyC/Pages/Shared/_Layout.cshtml
+++ b/RazorCurrencyC/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Razor Currency Converter</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">CO550 WebApps</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CConvert">Currency Converter</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CConvert">Razor Currency Converter</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CConvert">Razor Movies</a>
                         </li>
                     </ul>
                 </div>
