--- a/RazorMovies/Pages/Movies/Create.cshtml
+++ b/RazorMovies/Pages/Movies/Create.cshtml
@@ -1,4 +1,5 @@
 @page
+@using RazorMovies.Models
 @model RazorMovies.Pages.Movies.CreateModel
 
 @{
@@ -25,7 +26,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Movie.Genre" class="control-label"></label>
-                <input asp-for="Movie.Genre" class="form-control" />
+                <select asp-for="Movie.Genre" class="form-control"
+                        asp-items="Html.GetEnumSelectList<Genres>()">
+                </select>
                 <span asp-validation-for="Movie.Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
